--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -23,9 +24,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.firebase:firebase-database:16.0.4'
-    implementation 'com.google.firebase:firebase-storage:16.0.4'
-    implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
     implementation 'androidx.navigation:navigation-ui:2.1.0'
@@ -37,8 +35,22 @@ dependencies {
     implementation 'com.github.florent37:shapeofview:1.3.2'
     implementation 'me.biubiubiu.justifytext:library:1.1'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
     implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.google.firebase:firebase-messaging:17.5.0'
 
+    //firebase
+    implementation 'com.google.firebase:firebase-core:16.0.7'       //Analytics
+    implementation 'com.google.firebase:firebase-auth:16.1.0'       //Authentication
+    implementation 'com.google.firebase:firebase-firestore:18.1.0'  //Cloud Firestore
+    implementation 'com.google.firebase:firebase-storage:16.1.0'    //Storage
+    implementation 'com.firebaseui:firebase-ui-storage:4.2.0'
+    implementation 'com.firebaseui:firebase-ui-firestore:4.0.0'
+
+    //view
+    implementation 'android.arch.core:runtime:1.1.1'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 
 }
