--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
     implementation 'androidx.navigation:navigation-ui:2.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    implementation 'com.android.support:support-v4:29.+'
+    implementation 'com.android.support:support-v4:'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-database:16.0.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -52,8 +53,10 @@ dependencies {
 
     //view
     implementation 'android.arch.core:runtime:1.1.1'
-    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
 
 }
